--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,8 +15,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "@types/jsdom": "^21.1.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -31,7 +27,6 @@
     "jsdom": "^26.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.4",
-    "vitest": "^3.2.4"
+    "vite": "^7.0.4"
   }
 }
